[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/game/buildings/Building.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/building.tres" type="Texture" id=2]
[ext_resource path="res://source/interface/NamePanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/construction_sight.tres" type="Texture" id=4]
[ext_resource path="res://assets/sprites/progress.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[node name="Building" type="Node2D"]
script = ExtResource( 1 )
building_name = "Building"
building_texture = ExtResource( 2 )

[node name="NamePanel" parent="." instance=ExtResource( 3 )]
show_behind_parent = true
margin_left = -27.7692
margin_top = -21.1425
margin_right = 32.2308
margin_bottom = -7.14246

[node name="Tween" type="Tween" parent="."]

[node name="BuildTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="BuildingProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -7.0
margin_top = -9.0
margin_right = 7.0
margin_bottom = -8.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 0.54902 )
tint_progress = Color( 0.435294, 0.309804, 0.137255, 1 )
nine_patch_stretch = true

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource( 1 )
[connection signal="timeout" from="BuildTimer" to="." method="_on_BuildTimer_timeout"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_MouseArea_mouse_exited"]
